# Flipkart-Grid-Robotics-R2

./: .gitignore  README.md
grid_arena_r2/: .gitignore  CMakeLists.txt  package.xml
grid_arena_r2/action/: bot.action
grid_arena_r2/launch/: arena.launch
grid_arena_r2/models/arena_ground_2/: model.config  model.sdf
grid_arena_r2/models/arena_ground_2/materials/scripts/: arena_ground_2.material
grid_arena_r2/models/digitizer_bot/: model.config  model.sdf
grid_arena_r2/models/digitizer_bot/materials/scripts/: digitizer_bot.material
grid_arena_r2/models/digitizer_platform/: model.config  model.sdf
grid_arena_r2/models/grid_robot_description_1/: model.sdf
grid_arena_r2/src/: #1.py  .gitignore  2_bot.py  2_bot_client.py  2_bot_vis  2_bot_vis.py  4 bot path planning.webm  4 bot planned path.webm  Sample Data - Sheet1.csv  abc.json  action_server.py  april.py  april_node.py  apriltag_detection.py  apriltag_test.py  arena_mapping.py  arena_vis.py  bot_client.py  bot_maneuver.py  bot_maneuver2.py  bot_movement_test.py  cam_driver.py  cbs.py  centroid_points.py  centroids.py  controller.py  coordinate correction.py  coordinate_correction.py  coordinates.py  cords.json  delay_calculator.py  demo.py  destination.py  dict.py  dynamic_axis_rotation.ipynb  dynamic_mapped.py  expt.py  final_bot_maneuver.py  final_calib.py  four_bot_server.py  (+38 more)
grid_arena_r2/worlds/: arena.world
